--- a/templates/sound3d/index.html
+++ b/templates/sound3d/index.html
@@ -5,18 +5,18 @@
     <link rel="stylesheet" 
           href="{% static "css/bootstrap.min.css" %}"/>
     <link rel="stylesheet" 
-          href="{% static "css/font3d.css" %}" />
-    <link href='http://fonts.googleapis.com/css?family=Audiowide&effect=shadow-multiple' rel='stylesheet' type='text/css'>
+          href="{% static "css/sound3d.css" %}" />
+    <link href='https://fonts.googleapis.com/css?family=Lobster' rel='stylesheet' type='text/css'>
     <script type="text/javascript" src="{% static "js/jquery.min.js" %}"></script>
     <script type="text/javascript" src="{% static "js/bootstrap.min.js" %}"></script>
-    <title> font3d </title>
+    <title> sound3d </title>
   </head>
   <body>
     <div class="container text-center">
       <div class="row">
-	<h1 class="font-effect-shadow-multiple"> font3d </h1>
+	<h1 class="font-effect-shadow-multiple"> sound3d </h1>
 	<p>
-	  A web app to generate a 3D STL text model
+	  A web app to generate a 3D STL model from a sound file
 	</p>
 	<br>
       </div>
@@ -24,7 +24,8 @@
       <div class="row">
 	<form class="form-inline"  action="/" method="post">
           {% csrf_token %}
-          {{ form.inputString }}
+          {{ form.musicFile }}
+	  <br>
           <button class="btn btn-large" type="submit" value="Submit"> Download STL File </button> 
           <p> 
             <font color="red">
@@ -42,16 +43,19 @@
               <th> Step 1 </th>
               <th> Step 2 </th>
               <th> Step 3 </th>
+              <th> Step 4 </th>
             </tr>
           </thead>
           <tbody>
             <tr>
               <td class="col-md-2">
-                Enter some text and download the STL file. 
-                <br>
-                <br>
-                Only upper case letters, numbers and space is allowed.
+		Upload a piece of sound in *.mp3 / *.wave format.
+		<br>
+		It can be a song or voice recordings.
               </td>
+              <td class="col-md-2">
+		Click the Download button to generate the 3D model in STL format.
+	      </td>
               <td class="col-md-2">
                 Check the STL file
 		and Slice with your favourite G Code processing tool
@@ -79,10 +83,10 @@
       
       <div class="row">
         <br>
-        The backend of font3d is built with OpenSCAD and Django.
+        The backend of sound3d is built with OpenSCAD and Django.
 	<br>
 	Source:
-        <a href="https://github.com/goldbug/font3d"> https://github.com/goldbug/font3d </a>
+        <a href="https://github.com/cameronlai/sound3d"> https://github.com/goldbug/font3d </a>
       </div>
 
       <div class="row">
