Minor fixes to UI

--- a/templates/sound3d/index.html
+++ b/templates/sound3d/index.html
@@ -9,12 +9,12 @@
     <link href='https://fonts.googleapis.com/css?family=Lobster' rel='stylesheet' type='text/css'>
     <script type="text/javascript" src="{% static "js/jquery.min.js" %}"></script>
     <script type="text/javascript" src="{% static "js/bootstrap.min.js" %}"></script>
-    <title> sound3d </title>
+    <title> Sound3d </title>
   </head>
   <body>
     <div class="container text-center">
       <div class="row">
-	<h1 class="font-effect-shadow-multiple"> sound3d </h1>
+	<h1> Sound3d </h1>
 	<p>
 	  A web app to generate a 3D STL model from a sound file
 	</p>
@@ -79,14 +79,13 @@
             </tr>
           </tbody>
         </table>
-      </div>
-      
+      </div>      
       <div class="row">
         <br>
         The backend of sound3d is built with OpenSCAD and Django.
 	<br>
 	Source:
-        <a href="https://github.com/cameronlai/sound3d"> https://github.com/goldbug/font3d </a>
+        <a href="https://github.com/cameronlai/sound3d"> https://github.com/cameronlai/sound3d </a>
       </div>
 
       <div class="row">
