--- a/static/css/sound3d.css
+++ b/static/css/sound3d.css
@@ -1,18 +1,17 @@
 body{
     margin-top: 5%;
-    font-family: 'Audiowide', cursive;
+    font-family: 'Verdana';
     text-align: center;
 }
 
 h1{
+    font-family: 'Lobster';
     font-size: 150px;
 }
 
 #id_musicFile{
     font-size:20px;
-    font-family: 'Audiowide', cursive;
     text-align: center;
-    width: 700px;
     margin-left: auto;
     margin-right:auto;
     border-style: solid;
