--- a/templates/sound3d/index.html
+++ b/templates/sound3d/index.html
@@ -22,7 +22,7 @@
       </div>
 
       <div class="row">
-	<form class="form-inline"  action="/" method="post">
+	<form class="form-inline"  action="/" method="post" enctype="multipart/form-data">
           {% csrf_token %}
           {{ form.musicFile }}
 	  <br>
